--- a/.tekton/quarkusdevfile2-uisp-pull-request.yaml
+++ b/.tekton/quarkusdevfile2-uisp-pull-request.yaml
@@ -32,7 +32,7 @@ spec:
     value: '{{revision}}'
   pipelineSpec:
     finally:
-    - name: show-sbom
+    - name: show-me-the-sbom
       params:
       - name: IMAGE_URL
         value: $(tasks.build-container.results.IMAGE_URL)
